= 1.1.1 = * Fix: "Disable Title Output" under the "Advanced Options" in the widget wasn't working, it is now; thanks "game writer" for notifying us of this bug. * Fix: Avatar image overlapping into the content because of lack of max-width CSS property.
git-svn-id: https://plugins.svn.wordpress.org/google-places-reviews/trunk@1009312 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/google-places-reviews.css
+++ b/assets/css/google-places-reviews.css
@@ -11,7 +11,7 @@ Global Header
 ------------------------------------*/
 
 [id*='gpr_widget'] .gpr-business-header {
-	margin: 0 0 15px;
+	margin: 0 0 20px;
 }
 
 [id*='gpr_widget'] .gpr-business-header .gpr-header-content-wrap {
@@ -26,7 +26,6 @@ Global Header
 	line-height: 15px;
 	width: 100%;
 }
-
 
 [id*='gpr_widget'] .gpr-business-avatar {
 	float: left;
@@ -65,9 +64,8 @@ Global Header
 	line-height: 18px;
 }
 
-
 [id*='gpr_widget'] p.gpr-rating-value {
-    margin: 0;
+	margin: 0;
 	padding: 0;
 	float: left;
 	font-size: 12px;
@@ -145,6 +143,10 @@ Global Reviews
 	height: 50px;
 }
 
+[id*='gpr_widget'] .gpr-review-avatar > img {
+	max-width: 100%;
+}
+
 [id*='gpr_widget'] div.gpr-review-info {
 	margin-left: 60px;
 }
@@ -173,7 +175,6 @@ Global Reviews
 [id*='gpr_widget'] div.gpr-review-content > p:last-of-type, [id*='gpr_widget'] div.gpr-review:last-of-type {
 	margin-bottom: 0;
 }
-
 
 /*--------------------------------
 GPR Alerts
